公告加标签

--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_order_filing.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_order_filing.html
@@ -161,57 +161,57 @@
                         <div class="row mt-2 mb-2" id="div1"> 
                                 <div class="col-md-4">
                                     <span>客户ID：</span>
-                                    <span id="custom_id">001354574</span>
+                                    <span id="custom_id">*</span>
                                 </div>
                                 <div class="col-md-4">
                                     <span>客户用户名：</span>
-                                    <span id="customId">row</span>
+                                    <span id="customId">*</span>
                                 </div>
                                 <div class="col-md-4">
                                     <span>接单日期：</span>
-                                    <span id="receiver_date">2018-09-10</span>
+                                    <span id="receiver_date">*</span>
                                 </div>
                             </div>
                             <div class="row mt-2 mb-2" id="div2">
                                 <div class="col-md-4">
                                     <span>地区：</span>
-                                    <span id="continent">**</span>
+                                    <span id="continent">*</span>
                                 </div>
                                 <div class="col-md-4">
                                     <span>国家：</span>
-                                    <span id="country">中国</span>
+                                    <span id="country">*</span>
                                 </div>
                                 <div class="col-md-4">
                                     <span>报告类型：</span>
-                                    <span id="reportType">基本信用报告</span>
+                                    <span id="reportType">*</span>
                                 </div>
                             </div>
                             <div class="row mt-2 mb-2" id="div3">
                                 <div class="col-md-4">
                                     <span>订单类型：</span>
-                                    <span id="orderType">**</span>
+                                    <span id="orderType">*</span>
                                 </div>
                                 <div class="col-md-4">
                                     <span>报告语言：</span>
-                                    <span id="reportLanguage">中文</span>
+                                    <span id="reportLanguage">*</span>
                                 </div>
                                 <div class="col-md-4">
                                     <span>订单公司名称：</span>
-                                    <span id="companyNames">北京小米科技有限公司</span>
+                                    <span id="companyNames">*</span>
                                 </div>
                             </div>
                             <div class="row mt-2 mb-2" id="div4">
                                 <div class="col-md-4">
                                     <span>报告速度</span>
-                                    <span id="speed">普通</span>
+                                    <span id="speed">*</span>
                                 </div>
                                 <div class="col-md-4">
                                     <span>报告用时：</span>
-                                    <span id="user_time">5天</span>小时
+                                    <span id="user_time">*</span>小时
                                 </div>
                                 <div class="col-md-4">
                                     <span>公司中文名称：</span>
-                                    <span id="companyZHNames">北京小米科技有限公司</span>
+                                    <span id="companyZHNames">*</span>
                                 </div>
                                 
                             </div>
@@ -307,6 +307,7 @@
                                     <span>公司中文名称：</span>
                                     <span id="companyZHNames2">**</span>
                                 </div>
+                                
                                  <input type="hidden" name="orderId" id="orderId2">
                                  <input type="hidden" name="companyId2" id="companyId2">
                             </div>
