企查查接口调用

--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_info_import.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_info_import.html
@@ -211,7 +211,8 @@
                                     <span>报告用时：</span>
                                     <span id="user_time">**</span>小时
                                 </div>
-                                 <input type="hidden" name="orderId" id="orderId">
+                                <input type="hidden" name="orderId" id="orderId">
+                                <input type="hidden" name="companyId" id="companyId">
                             </div>
                     </div>
                         <div class="file-upload">
