--- a/src/main/webapp/pages/credit/usercenter/index.html
+++ b/src/main/webapp/pages/credit/usercenter/index.html
@@ -220,6 +220,7 @@
             </div>
 
         </div>
+   <script src="${BASE_PATH }static/credit/assets/layui/layui.all.js"></script>
    <script src="${BASE_PATH }static/credit/js/index.js"></script>
    <script type="text/javascript">
    console.log(Public)
