完成流程进度

--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>联信</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
     <meta name="renderer" content="webkit">
-    <link rel="stylesheet" href="${BASE_PATH }static/credit/css/order_manage/order_common.css">
+    <link rel="stylesheet" href="${BASE_PATH }static/credit/css/order_manage/order_common.css?">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/order_manage/order_detail.css">
     <style>
         table>thead{
@@ -15,7 +15,10 @@
         table>thead>th{
             min-width: 8rem;
         }
-        .bar_box ul li:last-child .span_bar{
+        .bar_box{
+            padding-left: 2rem;
+        }
+        .bar_box ul li:first-child .span_bar{
             visibility: hidden;
         }
     </style>
