--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_order_filing.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_order_filing.html
@@ -31,6 +31,7 @@
                 <!-- 表格 -->
                 <div class="table-content">
                     <div class="bg-f pt-4">
+                    <button class="btn btn-primary mx-5" id="dl_btn" data-toggle="modal" data-target="#exampleModalCenter_allocation2"> 批量分配</button>
                         <table id="table"
                             data-toggle="table"
                             data-url="./data.json"
@@ -335,6 +336,41 @@
                 </div>
     </div>
 </div>
+   
+  		<!--批量代理分配-->
+        <div class="modal  fade" id="exampleModalCenter_allocation2" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content" style="min-height: 19.75rem">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                      
+                        <div class="file-upload">
+                            <div class="row mt-3 mb-2">
+                                <div class="input-group col-md-6 align-items-center">
+                                    <label class="control-label col-md-4 text-right">代理ID：</label>
+                                    <select name="agency_id2" id="agency_id2" class="form-control  col-md-6">
+                                       <option value="-1">请选择</option>
+                                    </select>
+                                </div>
+                                <div class="input-group col-md-6 align-items-center mt-3">
+                                    <label class="control-label col-md-4 text-right">代理类别：</label>
+                                    <select name="attr.agentcategory" id="agent_category2" valid="vselect" validname="代理类别" class="form-control  col-md-6">
+                                        <option value="-1">请选择</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" id="modal_submit_allocation2">提交</button>
+                    </div>
+                </div>
+    </div>
+</div>   
    
 
 </html>
