--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
@@ -12,7 +12,7 @@
         table>thead{
             background-color: var(--bg-thead);
         }
-        table>thead>th{
+        table>thead th{
             min-width: 8rem;
         }
         .bar_box{
@@ -126,13 +126,12 @@
 -->
             <!-- 基本报告 -->
             <!-- 附件-->
-            <div class="module-wrap bg-f mt-4">
+           <!-- <div class="module-wrap bg-f mt-4">
                 <a name="accessory"> </a>
                 <div class="l-title">
                     附件
                 </div>
                 <div class="order-detail mb-4 order-content accessory_box">
-
                     <%if(files.~size>0){ %>
                     <%for(item in files){%>
                     <div>
@@ -162,7 +161,7 @@
                     </div>
                     <%}%>
                 </div>
-                <!--    变化后的 -->
+                &lt;!&ndash;    变化后的 &ndash;&gt;
                  <div class="order-detail mb-4 order-content accessory_box">
                   <div>
                        <div class="uploadFile mt-3 mr-3 ml-3">
@@ -176,9 +175,9 @@
                 </div>
 
 
-            </div>
+            </div>-->
             <!--质检意见-->
-            <div class="bg-f company-info mt-4 mb-4">
+            <!--<div class="bg-f company-info mt-4 mb-4">
 
                 <a name="operate_log"> </a>
                 <div class="l-title">
@@ -192,7 +191,7 @@
                     >
                     </table>
                 </div>
-            </div>
+            </div>-->
 
         </div>
     </div>
