--- a/src/main/webapp/pages/credit/common/menu.html
+++ b/src/main/webapp/pages/credit/common/menu.html
@@ -184,7 +184,7 @@
             <span class="error-text">获取数据失败</span>
         </div>
 </div>        
-       
+      
 	<script src="${BASE_PATH }static/credit/assets/jquery/jquery-2.1.0.js"></script>
     <script src="${BASE_PATH }static/credit/assets/laydate/laydate.js"></script>
    <script src="${BASE_PATH }static/credit/assets/layui/layui.all.js"></script>
@@ -200,5 +200,7 @@
      <script src="${BASE_PATH }static/credit/assets/echarts/echarts-liquidfill.js"></script>
      <script src="${BASE_PATH }static/credit/assets/echarts/world.js"></script>
     <script src="${BASE_PATH }static/credit/js/chartsCom.js"></script>
+ <!-- 动态配置js -->
+    <script src="${BASE_PATH }static/credit/js/report_config/initHtml.js"></script>
 </body>
 </html>
