--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_config.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_config.html
@@ -17,7 +17,7 @@
  		}
     </style>
 </head>
-
+<body>
 <div id="container" class="row animated fadeIn">
     <div class="main">
         <div class="main-header order-info">
@@ -66,6 +66,8 @@
 <script src="${BASE_PATH }static/credit/assets/city-select/Popt.js"></script>
  	<script src="${BASE_PATH }static/credit/assets/city-select/cityJson.js"></script>
  	<script src="${BASE_PATH }static/credit/assets/city-select/citySet.js"></script>
+
 <script src="${BASE_PATH }static/credit/js/report_config/main.js" ></script>
 
+</body>
 </html>
