基本信息基本完成

--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
@@ -24,10 +24,15 @@
         .bar_box ul li:first-child .span_bar {
             visibility: hidden;
         }
+        .guDongSubTitle{
+            margin: 2rem 0 0 2rem;
+            font-size: 1.125rem;
+            font-weight: bold;
+        }
+        .guDongSubTitle:nth-of-type(2){
+            margin-bottom: -2rem;
+        }
     </style>
-    <script type="text/javascript">
-        var BASE_PATH = "${BASE_PATH }";
-    </script>
 </head>
 
 <div id="container" class="row animted fadeIn">
@@ -60,6 +65,7 @@
         <!-- 内容展示 -->
         <div class="table-content">
             <!-- 基本信息 -->
+<!--
             <div class="module-wrap bg-f company-info">
                 <div class="table-content1 " style="background:#fff">
                     <div class="bootstrap-table">
@@ -158,31 +164,7 @@
                 <p class="m-3 ml-4">如果是个体户或无限责任性质的公司，新建立的或缺少财务资料的公司，评估的比重会增加到“股东背景”和“付款记录”两项。</p>
                 <p class="m-3 ml-4">使用缩写： N/A-不详 CNY-人民币 SC-目标公司</p>
             </div>
-            <!--<div class="module-wrap bg-f company-info">
-                <div class="bar_box p-3 process">
-                    <ul>
-
-                        &lt;!&ndash;<li>
-                            <div class="bar-span-box d-flex align-items-center">
-                                <span class="span_circle"></span><span class="span_bar"></span>
-                            </div>
-                            <span>报告核实</span><span></span><span></span>
-                        </li>
-                        <li>
-                            <div class="bar-span-box d-flex align-items-center">
-                                <span class="span_circle"></span><span class="span_bar"></span>
-                            </div>
-                            <span>信息录入</span>
-                        </li>
-                        <li>
-                            <div class="bar-span-box d-flex align-items-center">
-                                <span class="span_circle"></span><span class="span_bar"></span>
-                            </div>
-                            <span>报告质检</span><span></span><span></span>
-                        </li>&ndash;&gt;
-                    </ul>
-                </div>
-            </div>-->
+-->
 
             <!-- 流程进度 -->
             <!--
