--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_config.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_config.html
@@ -37,7 +37,7 @@
                     </div>
         </div>
         <!-- 滚动内容 -->
-        <div class="table-content">
+        <div class="main-content">
 
         </div> 
         
